Feat: updating 'rss' page translation

--- a/src/pages/fr/guides/rss.mdx
+++ b/src/pages/fr/guides/rss.mdx
@@ -3,35 +3,51 @@ layout: ~/layouts/MainLayout.astro
 title: Flux RSS
 description: Une introduction aux flux RSS avec Astro.
 ---
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
+import Since from '~/components/Since.astro'
 
-Astro supporte la génération rapide et automatique de flux RSS pour tout blogs et autres contenus. Pour plus d'informations sur les flux RSS, voir [aboutfeeds.com](https://aboutfeeds.com/).
+
+Astro prend en charge la génération rapide et automatique de flux RSS pour les blogs et autres contenus. Pour plus d'informations sur les flux RSS en général, voir [aboutfeeds.com](https://aboutfeeds.com/).
 
 ## Mise en place d'`@astrojs/rss`
 
-Le Package `@astrojs/rss` fournit des fonctions d'aide pour la génération de flux RSS en utilisant des ["API endpoints" (ou points d'arrêt API)](/fr/core-concepts/astro-pages/#pages-non-html). Cela permet de générer des fichiers statiques _et_ de générer des flux RSS à la demande lors de l'utilisation d'un [adaptateur SSR](/fr/guides/server-side-rendering/#activation-du-mode-ssr-dans-votre-projet).
+Le [package `@astrojs/rss`](https://github.com/withastro/astro/tree/main/packages/astro-rss) fournit des fonctions d'aide pour la génération de flux RSS en utilisant des ["API endpoints" (ou points d'arrêt API)](/fr/core-concepts/endpoints/#points-de-terminaison-statiques). Cela permet de débloquer à la fois les builds statiques _et_ la génération à la demande lors de l'utilisation d'un [adaptateur SSR](/fr/guides/server-side-rendering/#activation-du-mode-ssr-dans-votre-projet).
 
 Pour commencer, installez `@astrojs/rss` en utilisant votre gestionnaire de Package préféré :
 
-```bash
-# npm
-npm i @astrojs/rss
-# yarn
-yarn add @astrojs/rss
-# pnpm
-pnpm i @astrojs/rss
-```
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+    ```shell
+    npm install @astrojs/rss
+    ```
+  </Fragment>
+  <Fragment slot="pnpm">
+    ```shell
+    pnpm install @astrojs/rss
+    ```
+  </Fragment>
+  <Fragment slot="yarn">
+    ```shell
+    yarn add @astrojs/rss
+    ```
+  </Fragment>
+</PackageManagerTabs>
 
 Ensuite, assurez-vous que vous avez [configuré la valeur `site`](/fr/reference/configuration-reference/#site) dans le fichier `astro.config` de votre projet. Celle-ci sera utilisée pour générer les liens dans votre flux RSS [via la variable d'environnement `SITE`](/fr/guides/environment-variables/#variables-denvironnement-par-défaut).
 
-> **Note :** La variable d'environnement `SITE` n'existe que dans la dernière version bêta de Astro 1.0. Mettez à jour Astro (`astro@latest`), ou écrivez votre `site` manuellement si cela n'est pas possible (voir les exemples ci-dessous).
+:::note[Requires v1]
+La variable d'environnement `SITE` n'existe que dans la dernière version bêta de Astro 1.0. Mettez à jour Astro vers sa dernière version (`astro@latest`), ou écrivez votre `site` manuellement si cela n'est pas possible (voir les exemples ci-dessous).
+:::
 
-Maintenant que tout est prêt, générons notre premier flux RSS ! Créez un fichier `rss.xml.js` dans votre répertoire `src/pages/`. `rss.xml` sera l'URL de sortie, donc n'oubliez pas de le renommer si vous préférez.
+Maintenant que tout est prêt, générons notre premier flux RSS ! Créez un fichier `rss.xml.js` dans votre répertoire `src/pages/`. `rss.xml` sera l'URL de sortie, donc n'hésitez pas à le renommer si vous préférez.
 
 Ensuite, importez l'Helper `rss` du Package `@astrojs/rss` et appelez-le avec les paramètres suivants :
 
 ```js
-// Exemple: src/pages/rss.xml.js
+// src/pages/rss.xml.js
 import rss from '@astrojs/rss';
+
 export const get = () => rss({
     // la valeur `<title>` de votre XML de sortie
     title: 'Buzz’s Blog',
@@ -53,18 +69,19 @@ export const get = () => rss({
 
 Les `items` acceptent soit :
 
-1. [Un résultat de `import.meta.glob(...)`](#1-avec-un-résultat-importmetaglob) **(utilisez cette option pour les fichiers `.md` à l'interieur du répertoire `src/pages/`)**
+1. [Un résultat de `import.meta.glob(...)`](#1-avec-un-résultat-importmetaglob) **(utilisez cette option uniquement que pour les fichiers `.md` à l'intérieur du répertoire `src/pages/`)**
 2. [Une liste d'objets RSS](#2-avec-une-liste-dobjets-rss), chacun possédant un champ `link`, `title`, `pubDate`, et optionnellement un champ `description` et/ou `customData`.
 
 ### 1. Avec un résultat `import.meta.glob`
 
 Nous recommandons cette option comme un raccourci pratique pour les fichiers `.md` dans le répertoire `src/pages/`. Chaque article devrait comporter un champ `title`, `pubDate`, et un champ optionnel `description` et/ou `customData` dans son Frontmatter. Si cela n'est pas possible, ou si vous préférez générer ce Frontmatter en code, [voir l'option 2](#2-avec-une-liste-dobjets-rss).
 
-Imaginons que vos articles soient stockés dans le répertoire `src/pages/blog/`. Vous pouvez générer un flux RSS comme suit :
+Imaginons que vos articles soient stockés dans le répertoire `src/pages/blog/`. Vous pouvez générer un flux RSS comme ceci :
 
 ```js
-// Exemple: src/pages/rss.xml.js
+// src/pages/rss.xml.js
 import rss from '@astrojs/rss';
+
 export const get = () => rss({
   title: 'Buzz’s Blog',
   description: 'A humble Astronaut’s guide to the stars',
@@ -73,27 +90,58 @@ export const get = () => rss({
 });
 ```
 
-Jetez un oeil à la [documentation de l'import glob de Vite](https://vitejs.dev/guide/features.html#glob-import) pour plus d'informations sur cette syntaxe d'import.
+Jetez un œil à la [documentation de l'import glob de Vite](https://vitejs.dev/guide/features.html#glob-import) pour plus d'informations sur cette syntaxe d'import.
 
 ### 2. Avec une liste d'objets RSS
 
-Nous recommandons cette option pour les fichiers `.md` en dehors du répertoire `pages/`. C'est un cas courant lors de la génération de routes [via `getStaticPaths()`](/fr/reference/api-reference/#getstaticpaths).
+Nous recommandons cette option pour les fichiers `.md` en dehors du répertoire `pages/`. C'est un cas courant lors de la génération de routes [via `getStaticPaths`](/fr/reference/api-reference/#getstaticpaths).
 
-Pour cet exemple, imaginons que vos articles `.md` soient stockés dans un répertoire `src/posts/`. Chaque article a un `title`, `pubDate`, et `slug` dans son Frontmatter, où `slug` correspond à l'URL de sortie sur votre site. Nous pouvons générer un flux RSS en utilisant [l'aide de Vite `import.meta.globEager`](https://vitejs.dev/guide/features.html#glob-import) comme suit :
+Pour cet exemple, imaginons que vos articles `.md` soient stockés dans un répertoire `src/posts/`. Chaque article a un `title`, `pubDate`, et `slug` dans son Frontmatter, où `slug` correspond à l'URL de sortie sur votre site. Nous pouvons générer un flux RSS en utilisant [l'Helper `import.meta.glob` de Vite](https://vitejs.dev/guide/features.html#glob-import) comme ceci :
 
 ```js
-// Exemple: src/pages/rss.xml.js
+// src/pages/rss.xml.js
 import rss from '@astrojs/rss';
-const postImportResult = import.meta.globEager('../posts/**/*.md');
+
+const postImportResult = import.meta.glob('../posts/**/*.md', { eager: true });
 const posts = Object.values(postImportResult);
+
 export const get = () => rss({
   title: 'Buzz’s Blog',
   description: 'A humble Astronaut’s guide to the stars',
   site: import.meta.env.SITE,
   items: posts.map((post) => ({
-    link: post.frontmatter.slug,
+    link: post.url,
     title: post.frontmatter.title,
     pubDate: post.frontmatter.pubDate,
+  }))
+});
+```
+
+### Incluant le contenu complet de la publication
+
+<Since v="1.6.14" />
+
+Par défaut, l'intégration RSS d'Astro ne supporte pas l'inclusion du contenu de chacune de vos publications dans le flux lui-même.
+
+Cependant, si vous créez vous-même la liste d'objets de flux RSS, vous pouvez passer des fichiers Markdown (pas MDX), à la clé `content` en utilisant [la propriété `compiledContent()`](/fr/guides/markdown-content/#exported-properties). Nous suggérons d'utiliser un Package comme [`sanitize-html`](https://www.npmjs.com/package/sanitize-html) pour être sûr que votre contenu soit correctement filtré, échappé et encodé pour être utilisé dans le flux XML.
+
+```js ins={2, 16} title={src/pages/rss.xml.js}
+import rss from '@astrojs/rss';
+import sanitizeHtml from 'sanitize-html';
+
+// Ne fonctionne qu'avec les fichiers Markdown !
+const postImportResult = import.meta.glob('../posts/**/*.md', { eager: true }); 
+const posts = Object.values(postImportResult);
+
+export const get = () => rss({
+  title: 'Buzz’s Blog',
+  description: 'A humble Astronaut’s guide to the stars',
+  site: import.meta.env.SITE,
+  items: posts.map((post) => ({
+    link: post.url,
+    title: post.frontmatter.title,
+    pubDate: post.frontmatter.pubDate,
+    content: sanitizeHtml(post.compiledContent()),
   }))
 });
 ```
@@ -106,7 +154,7 @@ Utilisez l'option `stylesheet` de la fonction `rss` pour spécifier un chemin ab
 
 ```js
 rss({
-  // Exemple: Utilisez votre feuille de style depuis "public/rss/styles.xsl"
+  // Exemple : Utilisez votre feuille de style depuis "public/rss/styles.xsl"
   stylesheet: '/rss/styles.xsl',
   // ...
 });
