--- a/src/pages/en/guides/migrate-to-astro.mdx
+++ b/src/pages/en/guides/migrate-to-astro.mdx
@@ -24,7 +24,7 @@ Depending on your existing project, you may be able to use your existing:
 
 - [UI framework components](/en/core-concepts/framework-components/) directly in Astro. 
 
-- [CSS stylesheets or libraries](/en/guides/styling/) including Taliwind. 
+- [CSS stylesheets or libraries](/en/guides/styling/) including Tailwind.
 
 - [Markdown/MDX files](/en/guides/markdown-content/), configured using your existing [remark and rehype plugins](/en/guides/markdown-content/#configuring-markdown-and-mdx).
 
