added content for vite 4 and removed features

--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -39,11 +39,60 @@ You can update your project's version of Astro to the latest version using your 
   </Fragment>
 </PackageManagerTabs>
 
+This guide includes major highlights and instructions on how to handle breaking changes when upgrading from v1.x and v2.0-beta releases. See [the changelog](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md) for full release notes.
 
-Read the guide below for major highlights and instructions on how to handle breaking changes.
 
-Astro v2.0 introduces some changes that you should be aware of when migrating from v1.x and v2.0-beta releases. See below for more details.
+## Astro 2.0
 
+### Updated: Vite 4
+
+Astro v2.0 has upgraded from Vite 3 to [Vite 4](https://vitejs.dev/). We've handled most of the upgrade for you inside of Astro; however, some subtle Vite behaviors may still change between versions. Refer to the official [Vite Migration Guide](https://vitejs.dev/guide/migration.html) if you run into trouble.
+
+
+### Removed: `legacy.astroFlavoredMarkdown`
+
+In 1.x? Astro moved the old Astro Flavored Markdown (also sometimes called Components in Markdown) to a legacy feature. This change removes the `legacy.astroFlavoredMarkdown` option completely.
+
+In 2.0 this feature is not available in Astro at all. We recommend [migrating to MDX](/en/guides/integrations-guide/mdx/) for those were still using this feature in 1.x.
+
+### Removed: `Astro.resolve()`
+
+In 0.24 Astro deprecated `Astro.resolve()`. This change removes the option completely.
+
+In 2.0 this feature is not available in Astro at all. You can resolve asset paths using `import` instead. For example:
+
+```astro
+---
+import 'style.css';
+import imageUrl from './image.png';
+---
+
+<img src={imageUrl} />
+```
+
+See the [v0.24 migration guide](https://github.com/withastro/docs/blob/aa7e4f568f418657eba297778729a8aee2a36409/src/pages/en/migrate.mdx#deprecated-astroresolve) for more information.
+
+### Removed: `Astro.fetchContent()`
+
+In 0.26 Astro deprecated `Astro.fetchContent()`. This change removes the option entirely.
+
+In 2.0 this feature is not available in Astro at all. Use [`Astro.glob()`](/en/guides/imports/#astroglob) instead to fetch Markdown files, or migrate to the [Content Collections](/en/guides/content-collections/) feature.
+
+```js
+let allPosts = await Astro.glob('./posts/*.md');
+```
+
+### Removed: `Astro.canonicalURL`
+
+In 1.0 Astro deprecated `Astro.canonicalURL`. This change removes the option entirely.
+
+In 2.0 this feature is not available in Astro at all. Use `Astro.url` instead to construct the canonical URL.
+
+```js
+const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+```
+
+--------
 
 ## 2.0.0-beta.1
 
@@ -51,11 +100,11 @@ Astro v2.0 introduces some changes that you should be aware of when migrating fr
 
 - [#5778](https://github.com/withastro/astro/pull/5778) [`49ab4f231`](https://github.com/withastro/astro/commit/49ab4f231c23b34891c3ee86f4b92bf8d6d267a3) Thanks [@bluwy](https://github.com/bluwy)! - Remove proload to load the Astro config. It will now use NodeJS and Vite to load the config only.
 
-- [#5771](https://github.com/withastro/astro/pull/5771) [`259a539d7`](https://github.com/withastro/astro/commit/259a539d7d70c783330c797794b15716921629cf) Thanks [@matthewp](https://github.com/matthewp)! - Removes support for astroFlavoredMarkdown
+{/* - [#5771](https://github.com/withastro/astro/pull/5771) [`259a539d7`](https://github.com/withastro/astro/commit/259a539d7d70c783330c797794b15716921629cf) Thanks [@matthewp](https://github.com/matthewp)! - Removes support for astroFlavoredMarkdown
 
   In 1.0 Astro moved the old Astro Flavored Markdown (also sometimes called Components in Markdown) to a legacy feature. This change removes the `legacy.astroFlavoredMarkdown` option completely.
 
-  In 2.0 this feature will not be available in Astro at all. We recommend migration to MDX for those were still using this feature in 1.x.
+  In 2.0 this feature will not be available in Astro at all. We recommend migration to MDX for those were still using this feature in 1.x. */}
 
 - [#5584](https://github.com/withastro/astro/pull/5584) [`9963c6e4d`](https://github.com/withastro/astro/commit/9963c6e4d50c392c3d1ac4492237020f15ccb1de) Thanks [@wulinsheng123](https://github.com/wulinsheng123)! - Builds chunks into the `assets` folder. This simplifies configuring immutable caching with your adapter provider as all files are now in the same `assets` folder.
 
@@ -160,7 +209,7 @@ Astro v2.0 introduces some changes that you should be aware of when migrating fr
 
 - [#5716](https://github.com/withastro/astro/pull/5716) [`dd56c1941`](https://github.com/withastro/astro/commit/dd56c19411b126439b8bc42d681b6fa8c06e8c61) Thanks [@bluwy](https://github.com/bluwy)! - Remove MDX Fragment hack. This was used by `@astrojs/mdx` to access the `Fragment` component, but isn't require anymore since `@astrojs/mdx` v0.12.1.
 
-- [#5685](https://github.com/withastro/astro/pull/5685) [`f6cf92b48`](https://github.com/withastro/astro/commit/f6cf92b48317a19a3840ad781b77d6d3cae143bb) Thanks [@bluwy](https://github.com/bluwy)! - Upgrade to Vite 4. Please see its [migration guide](https://vitejs.dev/guide/migration.html) for more information.
+{/* - [#5685](https://github.com/withastro/astro/pull/5685) [`f6cf92b48`](https://github.com/withastro/astro/commit/f6cf92b48317a19a3840ad781b77d6d3cae143bb) Thanks [@bluwy](https://github.com/bluwy)! - Upgrade to Vite 4. Please see its [migration guide](https://vitejs.dev/guide/migration.html) for more information. */}
 
 - [#5724](https://github.com/withastro/astro/pull/5724) [`16c7d0bfd`](https://github.com/withastro/astro/commit/16c7d0bfd49d2b9bfae45385f506bcd642f9444a) Thanks [@bluwy](https://github.com/bluwy)! - Remove outdated Vue info log. Remove `toString` support for `RenderTemplateResult`.
 
@@ -224,7 +273,7 @@ Astro v2.0 introduces some changes that you should be aware of when migrating fr
 
 - [#5707](https://github.com/withastro/astro/pull/5707) [`5eba34fcc`](https://github.com/withastro/astro/commit/5eba34fcc663def20bdf6e0daad02a6a5472776b) Thanks [@bluwy](https://github.com/bluwy)! - Remove deprecated `Astro` global APIs, including `Astro.resolve`, `Astro.fetchContent`, and `Astro.canonicalURL`.
 
-  #### `Astro.resolve`
+  {/* #### `Astro.resolve`
 
   You can resolve asset paths using `import` instead. For example:
 
@@ -253,7 +302,7 @@ Astro v2.0 introduces some changes that you should be aware of when migrating fr
 
   ```js
   const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-  ```
+  ``` */}
 
 - [#5707](https://github.com/withastro/astro/pull/5707) [`5eba34fcc`](https://github.com/withastro/astro/commit/5eba34fcc663def20bdf6e0daad02a6a5472776b) Thanks [@bluwy](https://github.com/bluwy)! - Remove `buildConfig` option parameter from integration `astro:build:start` hook in favour of the `build.config` option in the `astro:config:setup` hook.
 
