--- a/src/pages/en/guides/cms/spinal.mdx
+++ b/src/pages/en/guides/cms/spinal.mdx
@@ -1,20 +1,20 @@
 ---
 title: Spinal & Astro
-description: Create and update all markdown content in your Astro site with Spinal.
+description: Add content to your project using Spinal as your CMS.
 layout: ~/layouts/CMSLayout.astro
 stub: true
 service: Spinal
 ---
 
-[Spinal](https://spinalcms.com/cms-for-astro/) is commercial, SaaS-focussed, Git-based CMS.
+[Spinal](https://spinalcms.com/cms-for-astro/) is a commercial, SaaS-focused, Git-based CMS.
 
 ## Getting started
 
-1. [Create an Spinal account](https://spinalcms.com/signup/)
-2. Connect your GitHub account to Spinal
-3. Select the repository with Astro repo
+1. [Create a Spinal account](https://spinalcms.com/signup/).
+2. Connect your GitHub account to Spinal.
+3. Select your Astro repository when prompted.
 
-All markdown content from the selected folder will be imported into your Spinal account and is ready to be edited.
+All Markdown content from the selected folder will be imported into your Spinal account and is ready to be edited.
 
 ## Production Sites
 
