Feat: continue to update 'mardown-content' page translation to line 177

--- a/src/pages/fr/guides/markdown-content.mdx
+++ b/src/pages/fr/guides/markdown-content.mdx
@@ -96,6 +96,85 @@ Vous pouvez aussi passer le flag `--drafts` lors de l'exécution de `astro build
 
 Astro fournit des fonctionnalités Markdown supplémentaires et intégrées disponibles lors de l'utilisation de fichiers Markdown et MDX.
 
+### L'avant-propos `layout`
+
+Astro fourni aux pages Markdown et MDX une propriété spéciale `layout` d'avant-propos qui peut spécifier un chemin relatif (ou [alias](/fr/guides/aliases/)) à un [composant layout Astro](/fr/core-concepts/layouts/#markdownmdx-layouts).
+
+**`src/pages/posts/post-1.md`**
+
+```markdown {2}
+---
+layout: ../../layouts/BlogPostLayout.astro
+title: Astro en bref
+author: Himanshu
+description: Découvrez ce qui rend Astro génial !
+--- 
+Cet article est écrit en Markdown.
+```
+
+Les propriétés de l'avant-propos sont disponibles pour la mise-en-page via `Astro.props` :
+
+**`src/layouts/BlogPostLayout.astro`**
+
+```astro /frontmatter(?:.\w+)?/
+---
+const {frontmatter} = Astro.props;
+---
+<html>
+  <!-- ... -->
+  <h1>{frontmatter.title}</h1>
+  <h2>Auteur de l'article : {frontmatter.author}</h2>
+  <p>{frontmatter.description}<p>
+  <slot /> <!-- Le contenu Markdown est injecté ici -->
+   <!-- ... -->
+</html>
+```
+
+📚 En savoir plus à propos des [Layouts Markdown](/fr/core-concepts/layouts/#markdownmdx-layouts).
+
+### Identifiants d'En-tête
+
+L'utilisation d'en-tête en Markdown et MDX va automatiquement vous donner des liens d'ancrage afin que vous puissiez accéder directement à certaines sections de votre page.
+
+```markdown title="src/pages/page-1.md"
+---
+title: Ma page de contenu
+---
+## Introduction
+
+Je peux créer des liens internes vers [ma conclusion](#conclusion) sur la même page lors de l'écriture en Markdown. 
+
+## Conclusion
+
+Je peux utiliser l'URL `https://my-domain.com/page-1/#introduction` pour naviguer directement vers mon Introduction sur la page.
+```
+
+### Caractères spéciaux d'échappement
+
+Certains caractères ont une signification spéciale en Markdown et MDX. Vous devez utiliser une syntaxe différente si vous souhaitez les afficher. Pour ce faire, vous pouvez utiliser les [entités HTML](https://developer.mozilla.org/fr/docs/Glossary/Entity) à la place de ces caractères.
+
+Par exemple, pour prévenir `<` d'être interprété comme le début d'une base HTML, écrivez `&lt;`. Ou, pour prévenir `{` d'être interprété comme le début d'une expression JavaScript en MDX, écrivez `&lcub;`.
+
+## Fonctionnalités MDX uniquement
+
+L'ajout de [l'intégration Astro MDX](/fr/guides/integrations-guide/mdx/) améliore votre création de Markdown avec des variables, des expressions et des composants JSX.
+
+Il ajoute aussi des fonctionnalités supplémentaires au MDX standard, incluant le support de [l'avant-propos de style Markdown dans MDX](https://mdxjs.com/guides/frontmatter/). Cela vous permet d'utiliser la plupart des fonctionnalités Markdown intégrées d'Astro, telles qu'une propriété d'[avant-propos de `layout`](#lavant-propos-layout) et un paramètre pour les [brouillons de page](#pages-brouillons).
+
+Les fichiers `.mdx` doivent être écrit dans la [syntaxe MDX](https://mdxjs.com/docs/what-is-mdx/#mdx-syntax) plutôt que dans la syntaxe de type HTML d'Astro.
+
+### Utilisation de variables exportées dans MDX
+
+MDX permet d'utiliser l'instruction `export` pour ajouter des variables dans votre contenu MDX. Ces variables sont accessibles à la fois dans le modèle lui-même et comme propriétés nommées lors de [l'importation du fichier](#importing-markdown) à un autre endroit.
+
+Par exemple, vous pouvez exporter un champ `title` depuis une page ou un composant MDX pour l'utiliser en tant qu'en-tête avec les `{expressions JSX}` : 
+
+```mdx title="/src/pages/posts/post-1.mdx"
+export const title = 'Mon premier billet sur le MDX'
+
+# {title}
+```
+
 ### Exemple de Base
 
 La façon la plus simple de commencer à utiliser Markdown dans Astro est de créer une route vers une page d'accueil `src/pages/index.md` dans votre projet. Copiez le modèle de base ci-dessous dans votre projet, puis consultez le HTML de la page d'accueil générée à la route racine de votre projet. Généralement, cela se fait à [http://localhost:3000/](http://localhost:3000/).
