edit: remove experimental from content collections!

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -1,6 +1,6 @@
 ---
 layout: ~/layouts/MainLayout.astro
-title: Content Collections (Experimental)
+title: Content Collections
 description: >-
   Content collections help organize your Markdown and type-check your
   frontmatter with schemas.
@@ -24,19 +24,6 @@ Content collections help organize your Markdown or MDX and type-check your front
 ## Getting started
 
 First, run the [`astro dev`](/en/reference/cli-reference/#astro-dev), [`astro build`](/en/reference/cli-reference/#astro-build), or [`astro sync`](/en/reference/cli-reference/#astro-sync) commands to generate types. This will make the `astro:content` module available for [querying](#querying-content-collections) and [configuring](#configuring-collections) your content collections.
-
-Content Collections are experimental. To enable this feature, set the `experimental.contentCollections` flag in your Astro config:
-
-```js
-// astro.config.mjs
-import { defineConfig } from 'astro';
-
-export default defineConfig({
-  experimental: {
-    contentCollections: true,
-  },
-});
-```
 
 ### Update TypeScript configuration
 
