--- a/src/pages/en/reference/cli-reference.mdx
+++ b/src/pages/en/reference/cli-reference.mdx
@@ -123,7 +123,7 @@ This command only checks types within `.astro` files.
 Running `astro dev` or `astro build` will run the `sync` command as well.
 :::
 
-Generates TypeScript types for all Astro modules. This sets up a [`src/env.d.ts` file](/en/guides/typescript/#setup) for type inferencing, and defines the `astro:content` module for the (experimental) [Content Collections API](/en/guides/content-collections/).
+Generates TypeScript types for all Astro modules. This sets up a [`src/env.d.ts` file](/en/guides/typescript/#setup) for type inferencing, and defines the `astro:content` module for the [Content Collections API](/en/guides/content-collections/).
 
 ## `astro add`
 
