--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -23,6 +23,8 @@ Content collections help organize your Markdown or MDX and type-check your front
 
 ## Getting started
 
+First, run the [`astro dev`](/en/reference/cli-reference/#astro-dev), [`astro build`](/en/reference/cli-reference/#astro-build), or [`astro sync`](/en/reference/cli-reference/#astro-sync) commands to generate types. This will make the `astro:content` module available for [querying](#querying-content-collections) and [configuring](#configuring-collections) your content collections.
+
 Content Collections are experimental. To enable this feature, set the `experimental.contentCollections` flag in your Astro config:
 
 ```js
