added Markdown plugin config changes

--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -92,13 +92,62 @@ In 2.0 this feature is not available in Astro at all. Use `Astro.url` instead to
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 ```
 
+### Changed: Building chunks ???? 
+[Does this belong?]
+[#5584](https://github.com/withastro/astro/pull/5584) - builds to `assets`. This is (?) changing to `_astro`? Not done yet?
+
+Builds chunks into the `_astro` folder. This simplifies configuring immutable caching with your adapter provider as all files are now in the same `assets` folder.
+
+### Changed: Markdown plugin configuration
+
+#### Removed: `extendDefaultPlugins`
+
+Astro 2.0 removes `markdown.extendDefaultPlugins` as applying remark and rehype plugins **no longer disables** Astro's default plugins. 
+
+GitHub-Flavored Markdown and Smartypants are now applied whether or not custom `remarkPlugins` or `rehypePlugins` are configured. (You can opt-out manually by setting [`gfm` and `smartypants`](#added-gfm-and-smartypants) to `false` in your config.)
+
+You no longer need `extendDefaultPlugins: true` in your configuation. This is now Astro's default behavior in 2.0.
+
+```diff
+// astro.config.mjs
+import { defineConfig } from 'astro/config';
+
+export default defineConfig({
+  markdown: {
+-   extendDefaultPlugins: true,
+  }
+});
+```
+
+#### Added: `gfm` and `smartypants`
+
+Astro 2.0 replaces `markdown.extendDefaultPlugins` with separate Boolean options to control each of Astro's built-in default plugins individually. These are enabled by default, and can be set to `false` to remove the plugin.
+
+- `markdown.gfm: false` disables GitHub-Flavored Markdown
+- `markdown.smartypants: false` disables SmartyPants
+
+```diff
+// astro.config.mjs
+import { defineConfig } from 'astro/config';
+
+export default defineConfig({
+  markdown: {
+-   extendDefaultPlugins: false,
++   smartypants: false,
++   gfm: false,
+  }
+});
+```
+
+
+
 --------
 
 ## 2.0.0-beta.1
 
 ### Major Changes
 
-- [#5778](https://github.com/withastro/astro/pull/5778) [`49ab4f231`](https://github.com/withastro/astro/commit/49ab4f231c23b34891c3ee86f4b92bf8d6d267a3) Thanks [@bluwy](https://github.com/bluwy)! - Remove proload to load the Astro config. It will now use NodeJS and Vite to load the config only.
+{/* - [#5778](https://github.com/withastro/astro/pull/5778) [`49ab4f231`](https://github.com/withastro/astro/commit/49ab4f231c23b34891c3ee86f4b92bf8d6d267a3) Thanks [@bluwy](https://github.com/bluwy)! - Remove proload to load the Astro config. It will now use NodeJS and Vite to load the config only. */}
 
 {/* - [#5771](https://github.com/withastro/astro/pull/5771) [`259a539d7`](https://github.com/withastro/astro/commit/259a539d7d70c783330c797794b15716921629cf) Thanks [@matthewp](https://github.com/matthewp)! - Removes support for astroFlavoredMarkdown
 
@@ -106,12 +155,12 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
   In 2.0 this feature will not be available in Astro at all. We recommend migration to MDX for those were still using this feature in 1.x. */}
 
-- [#5584](https://github.com/withastro/astro/pull/5584) [`9963c6e4d`](https://github.com/withastro/astro/commit/9963c6e4d50c392c3d1ac4492237020f15ccb1de) Thanks [@wulinsheng123](https://github.com/wulinsheng123)! - Builds chunks into the `assets` folder. This simplifies configuring immutable caching with your adapter provider as all files are now in the same `assets` folder.
+{/* - [#5584](https://github.com/withastro/astro/pull/5584) [`9963c6e4d`](https://github.com/withastro/astro/commit/9963c6e4d50c392c3d1ac4492237020f15ccb1de) Thanks [@wulinsheng123](https://github.com/wulinsheng123)! - Builds chunks into the `assets` folder. This simplifies configuring immutable caching with your adapter provider as all files are now in the same `assets` folder. */}
 
-- [#5717](https://github.com/withastro/astro/pull/5717) [`a3a7fc929`](https://github.com/withastro/astro/commit/a3a7fc9298e6d88abb4b7bee1e58f05fa9558cf1) Thanks [@bluwy](https://github.com/bluwy)! - Remove `style.postcss` Astro config. Refactor tailwind integration to configure through `vite` instead. Also disables `autoprefixer` in dev.
+{/* - [#5717](https://github.com/withastro/astro/pull/5717) [`a3a7fc929`](https://github.com/withastro/astro/commit/a3a7fc9298e6d88abb4b7bee1e58f05fa9558cf1) Thanks [@bluwy](https://github.com/bluwy)! - Remove `style.postcss` Astro config. Refactor tailwind integration to configure through `vite` instead. Also disables `autoprefixer` in dev. style.postcss Astro config can be removed in favour of vite.css.postcss */}
 
 ### Minor Changes
-
+{/* 
 - [#5769](https://github.com/withastro/astro/pull/5769) [`93e633922`](https://github.com/withastro/astro/commit/93e633922c2e449df3bb2357b3683af1d3c0e07b) Thanks [@bholmesdev](https://github.com/bholmesdev)! - Introduce a `smartypants` flag to opt-out of Astro's default SmartyPants plugin.
 
   ```js
@@ -120,9 +169,9 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
       smartypants: false,
     }
   }
-  ```
+  ``` */}
 
-  #### Migration
+  {/* #### Migration
 
   You may have disabled Astro's built-in plugins (GitHub-Flavored Markdown and Smartypants) with the `extendDefaultPlugins` option. This has now been split into 2 flags to disable each plugin individually:
 
@@ -140,7 +189,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
   +   gfm: false,
     }
   });
-  ```
+  ``` */}
 
 ### Patch Changes
 
@@ -229,7 +278,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
   #### Migration
 
   To preserve your existing Markdown and MDX setup, you may need some configuration changes:
-
+{/* 
   ##### Smartypants manual installation
 
   [Smartypants](https://github.com/silvenon/remark-smartypants) has been removed from Astro's default setup. If you rely on this plugin, [install `remark-smartypants`](https://github.com/silvenon/remark-smartypants#installing) and apply to your `astro.config.*`:
@@ -244,8 +293,8 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
   +   remarkPlugins: [smartypants],
     }
   });
-  ```
-
+  ``` */}
+{/* 
   ##### Migrate `extendDefaultPlugins` to `gfm`
 
   You may have disabled Astro's built-in plugins (GitHub-Flavored Markdown and Smartypants) with the `extendDefaultPlugins` option. Since Smartypants has been removed, this has been renamed to `gfm`.
@@ -262,7 +311,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
   });
   ```
 
-  Additionally, applying remark and rehype plugins **no longer disables** `gfm`. You will need to opt-out manually by setting `gfm` to `false`.
+  Additionally, applying remark and rehype plugins **no longer disables** `gfm`. You will need to opt-out manually by setting `gfm` to `false`. */}
 
   ##### Migrate MDX's `extendPlugins` to `extendMarkdownConfig`
 
