better heading for search results
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -37,7 +37,7 @@ When you rebuild your Gatsby site in Astro, you will notice some important diffe
 - [Local file data](/en/guides/imports/): Gatsby uses GraphQL to retrieve data from your project files. Astro uses ESM imports and a top-level await [`Astro.glob()`](/en/guides/imports/#astroglob) call to import data from your project files. GraphQL may optionally be added to your Astro project, but is not included by default.
 
 
-## Convert your Project
+## Convert your Gatsby Project
 
 ### Create a new Astro project
 
