better search headings, to match Gatsby update

--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -33,7 +33,7 @@ When you rebuild your Next.js site in Astro, you will notice some important diff
 
 - [Content-focus](/en/concepts/why-astro/): Astro was designed primarily for content-focused sites. An existing Next.js app might be built for high client-side interactivity and may include items that are difficult to replicate in Astro, such as dashboards.
 
-## Convert your Project
+## Convert your Next.js Project
 
 ### Create a new Astro project
 
